add jquery ui file

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
 
 	<header>
-		<div class="navbar navbar-default navbar-fixed-top navbar-inverse">
-			<div class="container">
+		<div class="container wrapper">
+			<div class="navbar navbar-default navbar-fixed-top navbar-inverse">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
 						<span class="icon-bar"></span>
@@ -38,7 +38,7 @@
 		</div>
 	</header>
 	
-	<div class="container container-top" id="about-me">
+	<div class="container wrapper container-top" id="about-me">
 		<h1 class="text-center container-title">About Me</h1>
 		<div class="row">
 			<div class="col-md-3  col-xs-12">
@@ -52,7 +52,7 @@
 		</div>
 	</div> <!-- About Me Ends -->
 
-	<div class="container container-top" id="work-ex">
+	<div class="container wrapper container-top" id="work-ex">
 		<h1 class="text-center container-title">Work Experience</h1>
 		<div class="row">
 			<div class="col-md-3  col-xs-12">
@@ -103,7 +103,7 @@
 		</div> <!-- work ex nvidia-->
 	</div> <!-- Work Experience Ends -->
 
-	<div class="container">
+	<div class="container wrapper">
 		<div class="row">
 			<div class="col-md-5 col-xs-12 container-top" id="skills">
 				<h1 class="text-center container-title">Skills</h1>                   
@@ -149,7 +149,7 @@
 	                <div class="card">
 	                    <div class="face front">
 	                        <!-- <div class="well well-sm inner">Education</div> -->
-	                        <img width="400" height="220" src="static/convo.jpg"  class="  center-block" data-toggle="tooltip" title="Click to flip" alt="Convocation" />
+	                        <img width="300" id="convo-img" src="static/convo.jpg"  class="img-responsive center-block" data-toggle="tooltip" title="Click to flip" alt="Convocation" />
 	                    </div>
 	                    <div class="face back">
 	                    	<div class="row college">
@@ -180,7 +180,7 @@
 		</div>
 	</div> <!-- Education and skills container ends -->
 
-	<div class="container container-top" id="trips">
+	<div class="container wrapper container-top" id="trips">
 		<h1 class="text-center container-title">Recent Trips</h1>
 		<div class="row">
 			<div class="col-md-12 col-xs-12 text-left"> <a href="http://www.chadartrek.com/"><h3> Chadar Trek </h3> </a> </div>
@@ -192,9 +192,9 @@
 		</div>
 	</div>
 
-	<footer class="footer container">
+	<footer class="footer container wrapper">
 		<div class="row">
-  			<div class="col-md-offset-6 col-md-6 col-xs-12">
+  			<div class="col-md-offset-4 col-md-8 col-xs-12">
   				<a class="social-media" href="https://github.com/sarthak-04" target="_blank">Github</a>
   				<a class="social-media" href="https://www.linkedin.com/in/sarthakagrawal" target="_blank">LinkedIn</a>
   				<a class="social-media" href="https://twitter.com/4_sarthak" target="_blank">Twitter</a>
@@ -204,7 +204,7 @@
 	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js" integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw=" crossorigin="anonymous"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script-main.js"></script>
