updated work exp

--- a/index.html
+++ b/index.html
@@ -71,8 +71,20 @@
 					</div> <!-- work span -->
 					<div class="row">
 						<div class="col-md-12 col-xs-12"> 						
-							<p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, y	our columns don't clear quite right as one is taller than the 		other. To fix that, use a combination of a .clearfix and o
+							<p> <b> ShoreTel </b> is a leading provider of cloud, onsite, and hybrid business telephony and unified communications (UC) solutions.
 							</p>
+							<ul>
+								<li>Migration of ShoreTel Sky’s integration with Bullhorn from Soap web services to RESTful APIs</li>
+								<li>Implemented OAuth2 based verification and created data models to parse JSON response in C# </li>
+								<li>Setup IIS server for unit testing.</li>
+							</ul>
+							<p> <b> Connect Client </b> is the windows/mac and web based platform, used to make calls, create/attend conferences,chat/IM, video colaborations.
+							</p>
+							<ul>
+								<li>Feature implementation for mac/windows based Connect Client using node-webkit, Canjs, jquery and stealjs</li>
+								<li> Unit testing with Func Unit </li>
+								<li> Also involved in continuous bug-fixing </li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -95,8 +107,14 @@
 				</div> <!-- work span -->
 				<div class="row">
 					<div class="col-md-12 col-xs-12"> 						
-						<p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, y	our columns don't clear quite right as one is taller than the 		other. To fix that, use a combination of a .clearfix and o
+						<p>Nvidia produces Tegra mobile processors for smartphones and tablets, as well as for vehicle navigation and entertainment systems.
 						</p>
+						<ul>
+							<li>Worked as System level Design verification engineering intern at NVIDIA's mobile processorTegra team</li>
+							<li>Reviewed specifications, developed attributes, block/full chip tests, triage of failures, tracked bugs and analyzed coverage</li>
+							<li>Worked closely with design and IP teams to report bugs in design and improve micro-architecture</li>
+							<li>Ownership of single/multiple IP’s and responsible for complete verification flow from test plan development to coverage closure, worked on IO blocks PWM and TACH</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -198,11 +216,10 @@
   				<a class="social-media" href="https://github.com/sarthak-04" target="_blank">Github</a>
   				<a class="social-media" href="https://www.linkedin.com/in/sarthakagrawal" target="_blank">LinkedIn</a>
   				<a class="social-media" href="https://twitter.com/4_sarthak" target="_blank">Twitter</a>
-  				<a class="social-media" href="https://www.instagram.com/4sarthakagrawal/" target="_blank">Instagram</a>
+  				<a class="social-media" href="https://www.instagram.com/4sarthakagrawal" target="_blank">Instagram</a>
   			</div>
 	</footer>
 	
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
