--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 			<div class="col-md-9 col-xs-12 ">
-				<p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+				<p>Hi!, I'm Sarthak Agrawal, currently engaged as a UI developer at <a href="www.shoretel.com">ShoreTel</a>, India. I graduated from BITS Pilani, Hyderabad in 2015.</p>
 			</div>
 		</div>
 	</div> <!-- About Me Ends -->
