--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 				</div>
 			</div>
 			<div class="col-md-9 col-xs-12 ">
-				<p>Hi!, I'm Sarthak Agrawal, currently engaged as a UI developer at <a href="www.shoretel.com">ShoreTel</a>, India. I graduated from BITS Pilani, Hyderabad in 2015.</p>
+				<p>Hi!, I'm Sarthak Agrawal, currently working as a UI developer at <a href="www.shoretel.com">ShoreTel</a>, India. I graduated from BITS Pilani, Hyderabad in 2015. I am always learning, trying out new framworks and tools to enhance my skills. I am also an avid follower of <a href="https://www.producthunt.com/">Product Hunt.</a></p>
+				<p>A cup of tea (chai) or a game of badminton restores my normality  and I always make time for both.</p>  
 			</div>
 		</div>
 	</div> <!-- About Me Ends -->
