--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</div>
 				<div class="collpase navbar-collapse" id="example">
 					<ul class="nav navbar-nav">
-						<li><a href="#work-ex">Work Exp</a></li>
+						<li><a href="#work-ex">Work Experience</a></li>
 						<li><a href="#skills">Skills & Education</a></li>
 						<li><a href="#trips">Recent Trips</a></li>
 						<li><a href="static/Sarthak Agrawal.pdf" download data-toggle="tooltip" title="Download Resume">Resume</a></li>
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 			<div class="col-md-9 col-xs-12 ">
-				<p>Hi!, I'm Sarthak Agrawal, currently working as a UI developer at <a href="www.shoretel.com">ShoreTel</a>, India. I graduated from BITS Pilani, Hyderabad in 2015. I am always learning, trying out new framworks and tools to enhance my skills. I am also an avid follower of <a href="https://www.producthunt.com/">Product Hunt.</a></p>
+				<p>Hi, I'm Sarthak Agrawal, currently working as a UI developer at <a href="www.shoretel.com">ShoreTel</a>, India. I graduated from BITS Pilani, Hyderabad in 2015. I am always learning, trying out new frameworks and tools to enhance my skills. I am also an avid follower of <a href="https://www.producthunt.com/">Product Hunt.</a></p>
 				<p>A cup of tea (chai) or a game of badminton restores my normality  and I always make time for both.</p>  
 			</div>
 		</div>
