addef links for frameworks

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 							<p> <b> ShoreTel </b> is a leading provider of cloud, onsite, and hybrid business telephony and unified communications (UC) solutions.
 							</p>
 							<ul>
-								<li>Migration of ShoreTel Sky’s integration with Bullhorn from Soap web services to RESTful APIs</li>
+								<li>Worked on migrating ShoreTel Sky’s integration with Bullhorn from Soap web services to RESTful APIs</li>
 								<li>Implemented OAuth2 based verification and created data models to parse JSON response in C# </li>
 								<li>Setup IIS server for unit testing.</li>
 							</ul>
 							<p> <b> Connect Client </b> is the windows/mac and web based platform, used to make calls, create/attend conferences,chat/IM, video colaborations.
 							</p>
 							<ul>
-								<li>Feature implementation for mac/windows based Connect Client using node-webkit, Canjs, jquery and stealjs</li>
-								<li> Unit testing with Func Unit </li>
+								<li>Implemented features for mac/windows based Connect Client using <a href="https://github.com/nwjs/nw.js">node-webkit</a>,<a href="http://canjs.com/"> canjs</a>, jquery and <a href="https://stealjs.com/"> stealjs </a> </li>
+								<li> Unit testing with <a href="funcunit.com">Func Unit</a> </li>
 								<li> Also involved in continuous bug-fixing </li>
 							</ul>
 						</div>
