--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 		<div class="container wrapper">
 			<div class="navbar navbar-default navbar-fixed-top navbar-inverse">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
 					<a href="#about-me" class="navbar-brand glyphicon glyphicon-home"></a>
 				</div>
-				<div class="collpase navbar-collapse" id="example">
+				<div class="collapse navbar-collapse" id="example">
 					<ul class="nav navbar-nav">
 						<li><a href="#work-ex">Work Experience</a></li>
 						<li><a href="#skills">Skills & Education</a></li>
@@ -181,13 +181,13 @@
 					 		</div>
 					 		<div class="row high-school"> 
 								<div class="row institute-details">
-									<div class="col-md-6 col-xs-6 text-left institute-name"><h3> Bonnie Foi, Bhopal </h3></div>
+									<div class="col-md-6 col-xs-6 text-left institute-name"><h3> Bonnie Foi School </h3></div>
 									<div class="col-md-6 col-xs-6 text-right institute-name"><h3> 2010 - 2011 </h3></div>
 								</div>
 							</div>
 							<div class="row tenth"> 
 								<div class="row institute-details">
-									<div class="col-md-6 col-xs-6 text-left institute-name"><h3> Happy Days, Shivpuri </h3></div>
+									<div class="col-md-6 col-xs-6 text-left institute-name"><h3> Happy Days School </h3></div>
 									<div class="col-md-6 col-xs-6 text-right institute-name"><h3> 2008 - 2009 </h3></div>
 								</div>
 							</div>
