nav bar collapses on click

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 				</div>
 				<div class="collapse navbar-collapse" id="example">
 					<ul class="nav navbar-nav">
-						<li><a href="#work-ex">Work Experience</a></li>
-						<li><a href="#skills">Skills & Education</a></li>
-						<li><a href="#trips">Recent Trips</a></li>
-						<li><a href="static/Sarthak Agrawal.pdf" download data-toggle="tooltip" title="Download Resume">Resume</a></li>
+						<li class="nav-list-item"><a href="#work-ex">Work Experience</a></li>
+						<li class="nav-list-item"><a href="#skills">Skills & Education</a></li>
+						<li class="nav-list-item"><a href="#trips">Recent Trips</a></li>
+						<li class="nav-list-item"><a href="static/Sarthak Agrawal.pdf" download data-toggle="tooltip" title="Download Resume">Resume</a></li>
 					</ul>
 				</div>
 			</div>
