fixed footer stacking

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				</div> <!-- work span -->
 				<div class="row">
 					<div class="col-md-12 col-xs-12"> 						
-						<p>Nvidia produces Tegra mobile processors for smartphones and tablets, as well as for vehicle navigation and entertainment systems.
+						<p><b>Nvidia</b> produces Tegra mobile processors for smartphones and tablets, as well as for vehicle navigation and entertainment systems.
 						</p>
 						<ul>
 							<li>Worked as System level Design verification engineering intern at NVIDIA's mobile processorTegra team</li>
@@ -212,11 +212,11 @@
 
 	<footer class="footer container wrapper">
 		<div class="row">
-  			<div class="col-md-offset-4 col-md-8 col-xs-12">
-  				<a class="social-media" href="https://github.com/sarthak-04" target="_blank">Github</a>
-  				<a class="social-media" href="https://www.linkedin.com/in/sarthakagrawal" target="_blank">LinkedIn</a>
-  				<a class="social-media" href="https://twitter.com/4_sarthak" target="_blank">Twitter</a>
-  				<a class="social-media" href="https://www.instagram.com/4sarthakagrawal" target="_blank">Instagram</a>
+  			<div class="col-md-offset-4 col-md-8">
+  				<a class="social-media col-xs-3" href="https://github.com/sarthak-04" target="_blank">Github</a>
+  				<a class="social-media col-xs-3" href="https://www.linkedin.com/in/sarthakagrawal" target="_blank">LinkedIn</a>
+  				<a class="social-media col-xs-3" href="https://twitter.com/4_sarthak" target="_blank">Twitter</a>
+  				<a class="social-media col-xs-3" href="https://www.instagram.com/4sarthakagrawal" target="_blank">Instagram</a>
   			</div>
 	</footer>
 	
