--- a/index.html
+++ b/index.html
@@ -212,11 +212,10 @@
 
 	<footer class="footer container wrapper">
 		<div class="row">
-  			<div class="col-md-offset-4 col-md-8">
-  				<a class="social-media col-xs-3" href="https://github.com/sarthak-04" target="_blank">Github</a>
-  				<a class="social-media col-xs-3" href="https://www.linkedin.com/in/sarthakagrawal" target="_blank">LinkedIn</a>
-  				<a class="social-media col-xs-3" href="https://twitter.com/4_sarthak" target="_blank">Twitter</a>
-  				<a class="social-media col-xs-3" href="https://www.instagram.com/4sarthakagrawal" target="_blank">Instagram</a>
+  			<div class="col-md-12 text-right">
+  				<a class="social-media" href="https://github.com/sarthak-04" target="_blank">Github</a>
+  				<a class="social-media" href="https://www.linkedin.com/in/sarthakagrawal" target="_blank">LinkedIn</a>
+  				<a class="social-media" href="https://www.instagram.com/4sarthakagrawal" target="_blank">Instagram</a>
   			</div>
 	</footer>
 	
