changed toggle from click navbar button to collapse hide

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#about-me" class="navbar-brand glyphicon glyphicon-home"></a>
+					<a href="#about-me" class="navbar-brand glyphicon glyphicon-home active"></a>
 				</div>
 				<div class="collapse navbar-collapse" id="example">
 					<ul class="nav navbar-nav">
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 			<div class="col-md-9 col-xs-12 ">
-				<p>Hi, I'm Sarthak Agrawal, currently working as a UI developer at <a href="www.shoretel.com">ShoreTel</a>, India. I graduated from BITS Pilani, Hyderabad in 2015. I am always learning, trying out new frameworks and tools to enhance my skills. I am also an avid follower of <a href="https://www.producthunt.com/">Product Hunt.</a></p>
+				<p>Hi, I'm Sarthak Agrawal, currently working as a UI developer at <a href="https://www.shoretel.com" target="_blank">ShoreTel</a>, India. I graduated from BITS Pilani, Hyderabad in 2015. I am always learning, trying out new frameworks and tools to enhance my skills. I am also an avid follower of <a href="https://www.producthunt.com/" target="_blank">Product Hunt.</a></p>
 				<p>A cup of tea (chai) or a game of badminton restores my normality  and I always make time for both.</p>  
 			</div>
 		</div>
@@ -81,8 +81,8 @@
 							<p> <b> Connect Client </b> is the windows/mac and web based platform, used to make calls, create/attend conferences,chat/IM, video colaborations.
 							</p>
 							<ul>
-								<li>Implemented features for mac/windows based Connect Client using <a href="https://github.com/nwjs/nw.js">node-webkit</a>,<a href="http://canjs.com/"> canjs</a>, jquery and <a href="https://stealjs.com/"> stealjs </a> </li>
-								<li> Unit testing with <a href="funcunit.com">Func Unit</a> </li>
+								<li>Implemented features for mac/windows based Connect Client using <a href="https://github.com/nwjs/nw.js" target="_blank">node-webkit</a>,<a href="http://canjs.com/" target="_blank"> canjs</a>, jquery and <a href="https://stealjs.com/" target="_blank"> stealjs </a> </li>
+								<li> Unit testing with <a href="funcunit.com" target="_blank">Func Unit</a> </li>
 								<li> Also involved in continuous bug-fixing </li>
 							</ul>
 						</div>
@@ -201,7 +201,7 @@
 	<div class="container wrapper container-top" id="trips">
 		<h1 class="text-center container-title">Recent Trips</h1>
 		<div class="row">
-			<div class="col-md-12 col-xs-12 text-left"> <a href="http://www.chadartrek.com/"><h3> Chadar Trek </h3> </a> </div>
+			<div class="col-md-12 col-xs-12 text-left"> <a href="http://www.chadartrek.com/" target="_blank"><h3> Chadar Trek </h3> </a> </div>
 		</div>
 		<div class="row chadar-video">
 			<div class="embed-responsive embed-responsive-16by9">
