added google fonts Merriweather for h1 h3 and navbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     	
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather|Signika" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 
   </head>
@@ -36,7 +37,7 @@
 			</div>
 		</div>
 	</header>
-	
+<div class="test"  data-spy="scroll" data-target=".navbar" data-offset="50">
 	<div class="container wrapper container-top" id="about-me">
 		<h1 class="text-center container-title">About Me</h1>
 		<div class="row">
@@ -209,7 +210,7 @@
 			</div>
 		</div>
 	</div>
-
+</div>
 	<footer class="footer container wrapper">
 		<div class="row">
   			<div class="col-md-12 text-right">
