--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     	
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Merriweather|Signika" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather|Noto+Serif|Droid+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 
   </head>
